added testfile with basis tests

--- a/data/www/http/contact.html
+++ b/data/www/http/contact.html
@@ -110,7 +110,7 @@
 	</nav>
 	<main>
 		<h2>We'd love to hear from you!</h2>
-		<form action="submit_contact.py" method="post">
+		<form action="nph_CGI_submit_contact_info.py" method="post">
 			<input type="text" name="name" placeholder="Your Name" required>
 			<input type="email" name="email" placeholder="Your Email" required>
 			<textarea name="message" rows="5" placeholder="Your Message" required></textarea>
