--- a/data/www/http/upload.html
+++ b/data/www/http/upload.html
@@ -102,7 +102,7 @@
 	</nav>
 	<section>
 		<p></p>
-		<form action="upload_delete.py" method="post" enctype="multipart/form-data">
+		<form action="nph_CGI_upload.py" method="post" enctype="multipart/form-data">
 			<input type="file" name="file" accept="image/*,text/plain" required>
 			<br>
 			<button type="submit">Upload</button>
