--- a/data/www/http/successdelete.html
+++ b/data/www/http/successdelete.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 
 <html>
-  <body>
-    <h1>File "file.html" deleted.</h1>
-  </body>
+
+<body>
+	<h1>File deleted.</h1>
+	<br>
+	<a href="index.html" class="button">Go back</a>
+</body>
+
 </html>
