uploaded new html

--- a/data/www/http/contact.html
+++ b/data/www/http/contact.html
@@ -32,7 +32,7 @@
 		}
 
 		p {
-			color: red;
+			color: black;
 		}
 
 		/* Navigationbar */
@@ -44,7 +44,6 @@
 		.button {
 			background-color: beige;
 			border: 2px solid black;
-			color: black;
 			padding: 15px 32px;
 			text-align: center;
 			text-decoration: none;
@@ -61,8 +60,7 @@
 			text-align: left;
 		}
 
-		form input,
-		form textarea {
+		form input, form textarea {
 			width: 100%;
 			margin-bottom: 10px;
 			padding: 10px;
@@ -78,12 +76,11 @@
 		}
 
 		form button:hover {
-			background-color: darkblue;
+			background-color: black;
 		}
 
 		footer {
 			margin-top: 20px;
-			font-size: 0.9em;
 			color: gray;
 			padding: 50px;
 			height: 5%
