--- a/data/www/http/successupload.html
+++ b/data/www/http/successupload.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-	<body>
-		<h1>Upload Successful</h1>
-		<p>Your file has been uploaded successfully!</p>
-	</body>
+
+<body>
+	<h1>Upload Successful</h1>
+	<p>Your file has been uploaded successfully!</p>
+	<br>
+	<a href="index.html" class="button">Go back</a>
+	<a href="nph_CGI_upload_list.py" class="button">Uploads</a>
+</body>
+
 </html>
