--- a/data/www/http/upload.html
+++ b/data/www/http/upload.html
@@ -33,7 +33,7 @@
 		}
 
 		p {
-			color: red;
+			color: black;
 		}
 
 		/* Navigationbar */
@@ -75,7 +75,6 @@
 
 		footer {
 			margin-top: 20px;
-			font-size: 0.9em;
 			color: gray;
 			padding: 50px;
 			height: 5%
@@ -109,7 +108,6 @@
 		</form>
 	</section>
 	<footer>
-
 	</footer>
 </body>
 
