--- a/data/www/index.html
+++ b/data/www/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<!-- No favicon tag -->
 	<meta charset="utf-8">
@@ -12,28 +13,34 @@
 			font-family: Arial, sans-serif;
 			margin: 0;
 		}
+
 		header {
 			background-color: white;
 			text-align: center;
 			padding: 30px;
 			height: 10%
 		}
+
 		main {
 			background-color: rgb(255, 255, 255);
 			padding: 100px;
 			height: 50%
 		}
+
 		h1 {
 			color: blue;
 		}
+
 		p {
-			color: red;
+			color: black;
 		}
+
 		/* Navigationbar */
 		nav {
 			background-color: rgb(116, 80, 234);
 			height: 53px;
 		}
+
 		.button {
 			background-color: beige;
 			border: 2px solid black;
@@ -42,19 +49,20 @@
 			text-align: center;
 			text-decoration: none;
 			display: inline-block;
-			font-size: 16px;		
+			font-size: 16px;
 		}
+
 		.button:hover {
 			background-color: rgb(182, 123, 231);
 		}
 
 		footer {
 			margin-top: 20px;
-			font-size: 0.9em;
 			color: gray;
 			padding: 50px;
 			height: 5%
 		}
+
 		img {
 			max-width: 100%;
 			height: auto;
@@ -62,6 +70,7 @@
 		}
 	</style>
 </head>
+
 <body>
 	<header>
 		<h1>Webserv</h1>
@@ -75,11 +84,12 @@
 	</nav>
 	<main>
 		<h1>Welcome</h1>
-		<img src="Untitled.png" alt="Picture">
-		<p><a href="upload.html">Upload Files</a></p>
+		<img src="images/small.png" alt="Picture">
+		<p><a href="nph_CGI_upload_list.py">Uploaded Files</a></p>
 	</main>
 	<footer>
 		<p>Thanks for visiting</p>
 	</footer>
 </body>
+
 </html>
