--- a/data/www/http/contact.html
+++ b/data/www/http/contact.html
@@ -4,107 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap"
+		rel="stylesheet">
 	<title>Contact Us</title>
-	<style>
-		body {
-			background-color: beige;
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 0;
-			text-align: center;
-		}
-
-		header {
-			background-color: white;
-			text-align: center;
-			padding: 30px;
-			height: 10%
-		}
-
-		main {
-			background-color: rgb(255, 255, 255);
-			padding: 100px;
-			height: 50%
-		}
-
-		h1 {
-			color: blue;
-		}
-
-		p {
-			color: black;
-		}
-
-		/* Navigationbar */
-		nav {
-			background-color: rgb(116, 80, 234);
-			height: 53px;
-		}
-
-		.button {
-			background-color: beige;
-			border: 2px solid black;
-			padding: 15px 32px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-		}
-
-		.button:hover {
-			background-color: rgb(182, 123, 231);
-		}
-
-		form {
-			display: inline-block;
-			text-align: left;
-		}
-
-		form input, form textarea {
-			width: 100%;
-			margin-bottom: 10px;
-			padding: 10px;
-			font-size: 1em;
-		}
-
-		form button {
-			background-color: blue;
-			color: white;
-			padding: 10px 20px;
-			border: none;
-			cursor: pointer;
-		}
-
-		form button:hover {
-			background-color: black;
-		}
-
-		footer {
-			margin-top: 20px;
-			color: gray;
-			padding: 50px;
-			height: 5%
-		}
-
-		img {
-			max-width: 100%;
-			height: auto;
-			margin-top: 20px;
-		}
-	</style>
+	<link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
 	<header>
-		<h1>Webserv: contact</h1>
+		<h1>Contact</h1>
 	</header>
+
 	<nav>
-		<ul>
-			<a href="index.html" class="button">Home</a>
-			<a href="upload.html" class="button">Upload</a>
-			<a href="contact.html" class="button">Contact</a>
-		</ul>
+		<a href="index.html" class="button">Home</a>
+		<a href="upload.html" class="button">Upload</a>
+		<a href="contact.html" class="button">Contact</a>
 	</nav>
+
 	<main>
 		<h2>We'd love to hear from you!</h2>
 		<form action="nph_CGI_submit_contact_info.py" method="post">
@@ -115,7 +32,11 @@
 		</form>
 
 	</main>
+
 	<footer>
+		<a href="index.html" class="button">Home</a>
+		<br>
+		<br>
 		<p>&copy; 2025 Webserv. All rights reserved.</p>
 	</footer>
 </body>
