--- a/data/www/http/custom_404.html
+++ b/data/www/http/custom_404.html
@@ -4,7 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 	<title>Webserv</title>
+	<link rel="stylesheet" href="../css/styles.css">
 	<style>
 		body {
 			text-align: center;
@@ -13,8 +15,16 @@
 </head>
 
 <body>
-	<h1>Error 404 Not found</h1>
-	<p>This page does not exist, come back later or try a different one...</p>
+	<header>
+		<h1>Error 404 Not found</h1>
+
+		<p>This page does not exist, come back later or try a different one...</p>
+	</header>
+	<br>
+
+	<footer>
+		<a href="index.html" class="button">Go back</a>
+	</footer>
 </body>
 
 </html>
