--- a/data/www/http/successdelete.html
+++ b/data/www/http/successdelete.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 
 <html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+		<title>Webserv</title>
+		<link rel="stylesheet" href="../css/styles.css">
+		<style>
+			body {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<header>
+			<h1>File deleted.</h1>
+		</header>
+		<br>
 
-<body>
-	<h1>File deleted.</h1>
-	<br>
-	<a href="index.html" class="button">Go back</a>
-</body>
+		<footer>
+			<a href="index.html" class="button">Home</a>
+			<br>
+			<br>
+			<p>&copy; 2025 Webserv. All rights reserved.</p>
+		</footer>
+	</body>
 
 </html>
