--- a/data/www/http/successupload.html
+++ b/data/www/http/successupload.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 
 <html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+		<title>Webserv</title>
+		<link rel="stylesheet" href="../css/styles.css">
+		<style>
+			body {
+				text-align: center;
+			}
+		</style>
+	</head>
 
-<body>
-	<h1>Upload Successful</h1>
-	<p>Your file has been uploaded successfully!</p>
-	<br>
-	<a href="index.html" class="button">Go back</a>
-	<a href="nph_CGI_upload_list.py" class="button">Uploads</a>
-</body>
+	<body>
+		<header>
+			<h1>Upload Successful!</h1>
+		</header>
+
+		<footer>
+			<p>Your file has been uploaded successfully!</p>
+			<br>
+			<a href="index.html" class="button">Home</a>
+			<br>
+			<a href="nph_CGI_upload_list.py" class="button">Uploads</a>
+			<br>
+			<br>
+			<p>&copy; 2025 Webserv. All rights reserved.</p>
+		</footer>
+	</body>
 
 </html>
