--- a/data/www/http/upload.html
+++ b/data/www/http/upload.html
@@ -6,7 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Upload Image</title>
-	<style>
+	<link rel="stylesheet" href="../css/styles.css">
+	<!-- <style>
 		body {
 			font-family: Arial, sans-serif;
 			background-color: beige;
@@ -85,29 +86,35 @@
 			height: auto;
 			margin-top: 20px;
 		}
-	</style>
+	</style> -->
 </head>
 
 <body>
 	<header>
-		<h1>Webserv: upload an image</h1>
+		<h1>Upload an image</h1>
 	</header>
+
 	<nav>
-		<ul>
-			<a href="index.html" class="button">Home</a>
-			<a href="upload.html" class="button">Upload</a>
-			<a href="contact.html" class="button">Contact</a>
-		</ul>
+		<a href="index.html" class="button">Home</a>
+		<a href="upload.html" class="button">Upload</a>
+		<a href="contact.html" class="button">Contact</a>
 	</nav>
-	<section>
-		<p></p>
-		<form action="nph_CGI_upload.py" method="post" enctype="multipart/form-data">
-			<input type="file" name="file" accept="image/*,text/plain" required>
-			<br>
-			<button type="submit">Upload</button>
-		</form>
-	</section>
+
+	<main>
+		<section>
+			<p></p>
+			<form action="nph_CGI_upload.py" method="post" enctype="multipart/form-data">
+				<input type="file" name="file" accept="image/*,text/plain" required>
+				<br>
+				<button type="submit">Upload</button>
+			</form>
+		</section>
+	</main>
 	<footer>
+		<a href="index.html" class="button">Home</a>
+		<br>
+		<br>
+		<p>&copy; 2025 Webserv. All rights reserved.</p>
 	</footer>
 </body>
 
