--- a/data/www/index.html
+++ b/data/www/index.html
@@ -5,91 +5,30 @@
 	<!-- No favicon tag -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 	<title>Webserv</title>
-	<style>
-		body {
-			background-color: beige;
-			text-align: center;
-			font-family: Arial, sans-serif;
-			margin: 0;
-		}
+	<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
+		<header>
+			<h1>Webserv</h1>
+		</header>
 
-		header {
-			background-color: white;
-			text-align: center;
-			padding: 30px;
-			height: 10%
-		}
+		<nav>
+			<a href="index.html">Home</a>
+			<a href="upload.html">Upload</a>
+			<a href="contact.html">Contact</a>
+		</nav>
 
-		main {
-			background-color: rgb(255, 255, 255);
-			padding: 100px;
-			height: 50%
-		}
+		<main>
+			<h1>Welcome</h1>
+			<img src="images/welcome.jpg" alt="Picture">
+			<p><a class="button-link" href="nph_CGI_upload_list.py">View Uploaded Files</a></p>
+		</main>
 
-		h1 {
-			color: blue;
-		}
-
-		p {
-			color: black;
-		}
-
-		/* Navigationbar */
-		nav {
-			background-color: rgb(116, 80, 234);
-			height: 53px;
-		}
-
-		.button {
-			background-color: beige;
-			border: 2px solid black;
-			color: black;
-			padding: 15px 32px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-		}
-
-		.button:hover {
-			background-color: rgb(182, 123, 231);
-		}
-
-		footer {
-			margin-top: 20px;
-			color: gray;
-			padding: 50px;
-			height: 5%
-		}
-
-		img {
-			max-width: 100%;
-			height: auto;
-			margin-top: 20px;
-		}
-	</style>
-</head>
-
-<body>
-	<header>
-		<h1>Webserv</h1>
-	</header>
-	<nav>
-		<ul>
-			<a href="index.html" class="button">Home</a>
-			<a href="upload.html" class="button">Upload</a>
-			<a href="contact.html" class="button">Contact</a>
-		</ul>
-	</nav>
-	<main>
-		<h1>Welcome</h1>
-		<img src="images/small.png" alt="Picture">
-		<p><a href="nph_CGI_upload_list.py">Uploaded Files</a></p>
-	</main>
-	<footer>
-		<p>Thanks for visiting</p>
-	</footer>
-</body>
+		<footer>
+			<p>&copy; 2025 Webserv. All rights reserved.</p>
+		</footer>
+	</body>
 
 </html>
