different pathgenerator and changed buttons html

--- a/data/www/http/successdelete.html
+++ b/data/www/http/successdelete.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 		<title>Webserv</title>
-		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="/css/styles.css">
 		<style>
 			body {
 				text-align: center;
@@ -20,7 +20,7 @@
 		<br>
 
 		<footer>
-			<a href="index.html" class="button">Home</a>
+			<a href="/index.html" class="button">Home</a>
 			<br>
 			<br>
 			<p>&copy; 2025 Webserv. All rights reserved.</p>
