--- a/data/www/http/successupload.html
+++ b/data/www/http/successupload.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 		<title>Webserv</title>
-		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="/css/styles.css">
 		<style>
 			body {
 				text-align: center;
@@ -22,9 +22,9 @@
 		<footer>
 			<p>Your file has been uploaded successfully!</p>
 			<br>
-			<a href="index.html" class="button">Home</a>
+			<a href="/index.html" class="button">Home</a>
 			<br>
-			<a href="nph_CGI_upload_list.py" class="button">Uploads</a>
+			<a href="/cgi-bin/nph_CGI_upload_list.py" class="button">Uploads</a>
 			<br>
 			<br>
 			<p>&copy; 2025 Webserv. All rights reserved.</p>
