--- a/data/www/index.html
+++ b/data/www/index.html
@@ -16,14 +16,14 @@
 
 		<nav>
 			<a href="index.html">Home</a>
-			<a href="upload.html">Upload</a>
-			<a href="contact.html">Contact</a>
+			<a href="/http/upload.html">Upload</a>
+			<a href="/http/contact.html">Contact</a>
 		</nav>
 
 		<main>
 			<h1>Welcome</h1>
 			<img src="images/welcome.jpg" alt="Picture">
-			<p><a class="button-link" href="nph_CGI_upload_list.py">View Uploaded Files</a></p>
+			<p><a class="button-link" href="/cgi-bin/nph_CGI_upload_list.py">View Uploaded Files</a></p>
 		</main>
 
 		<footer>
