--- a/data/www/http/contact.html
+++ b/data/www/http/contact.html
@@ -8,7 +8,7 @@
 		href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap"
 		rel="stylesheet">
 	<title>Contact Us</title>
-	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -17,14 +17,14 @@
 	</header>
 
 	<nav>
-		<a href="index.html" class="button">Home</a>
-		<a href="upload.html" class="button">Upload</a>
-		<a href="contact.html" class="button">Contact</a>
+		<a href="/index.html" class="button">Home</a>
+		<a href="/http/upload.html" class="button">Upload</a>
+		<a href="/http/contact.html" class="button">Contact</a>
 	</nav>
 
 	<main>
 		<h2>We'd love to hear from you!</h2>
-		<form action="nph_CGI_submit_contact_info.py" method="post">
+		<form action="/cgi-bin/nph_CGI_submit_contact_info.py" method="post">
 			<input type="text" name="name" placeholder="Your Name" required>
 			<input type="email" name="email" placeholder="Your Email" required>
 			<textarea name="message" rows="5" placeholder="Your Message" required></textarea>
@@ -34,7 +34,7 @@
 	</main>
 
 	<footer>
-		<a href="index.html" class="button">Home</a>
+		<a href="/index.html" class="button">Home</a>
 		<br>
 		<br>
 		<p>&copy; 2025 Webserv. All rights reserved.</p>
