--- a/data/www/http/custom_404.html
+++ b/data/www/http/custom_404.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 	<title>Webserv</title>
-	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 	<style>
 		body {
 			text-align: center;
@@ -23,7 +23,7 @@
 	<br>
 
 	<footer>
-		<a href="index.html" class="button">Go back</a>
+		<a href="/index.html" class="button">Go back</a>
 	</footer>
 </body>
 
