--- a/data/www/http/upload.html
+++ b/data/www/http/upload.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Upload Image</title>
-	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -15,15 +15,15 @@
 	</header>
 
 	<nav>
-		<a href="index.html" class="button">Home</a>
-		<a href="upload.html" class="button">Upload</a>
-		<a href="contact.html" class="button">Contact</a>
+		<a href="/index.html" class="button">Home</a>
+		<a href="/http/upload.html" class="button">Upload</a>
+		<a href="/http/contact.html" class="button">Contact</a>
 	</nav>
 
 	<main>
 		<section>
 			<p></p>
-			<form action="nph_CGI_upload.py" method="post" enctype="multipart/form-data">
+			<form action="/cgi-bin/nph_CGI_upload.py" method="post" enctype="multipart/form-data">
 				<input type="file" name="file" accept="image/*,text/plain" required>
 				<br>
 				<button type="submit">Upload</button>
@@ -31,7 +31,7 @@
 		</section>
 	</main>
 	<footer>
-		<a href="index.html" class="button">Home</a>
+		<a href="/index.html" class="button">Home</a>
 		<br>
 		<br>
 		<p>&copy; 2025 Webserv. All rights reserved.</p>
