Changed success page to work for contacts too

--- a/data/www/http/successupload.html
+++ b/data/www/http/successupload.html
@@ -16,11 +16,11 @@
 
 	<body>
 		<header>
-			<h1>Upload Successful!</h1>
+			<h1>Successful!</h1>
 		</header>
 
 		<footer>
-			<p>Your file has been uploaded successfully!</p>
+			<p>Your action worked successfully!</p>
 			<br>
 			<a href="/index.html" class="button">Home</a>
 			<br>
